--- a/landing_page/styles.css
+++ b/landing_page/styles.css
@@ -12,3 +12,12 @@
 #mainNav.transparent {
   background-color: rgba(0, 0, 0, 0); /* Transparent background */
 }
+
+.button {
+  border-radius: 1px;
+  background-color: rbg(0, 0, 0, 0) ;
+background-op
+  outline: 2px solid white !important;
+  padding: 5px;
+  color: white !important;
+}
